<resources>
    <string name="app_name">FieldWork</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="month_01">Janeiro</string>
    <string name="month_02">Fevereiro</string>
    <string name="month_03">Março</string>
    <string name="month_04">Abril</string>
    <string name="month_05">Maio</string>
    <string name="month_06">Junho</string>
    <string name="month_07">Julho</string>
    <string name="month_08">Agosto</string>
    <string name="month_09">Setembro</string>
    <string name="month_10">Outubro</string>
    <string name="month_11">Novembro</string>
    <string name="month_12">Dezembro</string>
    <string name="vazio">VAZIO</string>
    <string name="title_activity_insert">InsertActivity</string>
    <string name="title_activity_cad_user">CadUserActivity</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="salvar">Salvar</string>
    <string name="cadastro_de_usuario">Cadastro de usuário</string>
    <string name="horas">Horas</string>
    <string name="minutos">Minutos</string>
    <string name="data">Data</string>
    <string name="selecionar_data">Selecionar data</string>
    <string name="zero">0</string>
    <string name="publicacoes">Publicações</string>
    <string name="videos">Vídeos</string>
    <string name="revisitas">Revisitas</string>
    <string name="title_activity_consult">ConsultActivity</string>
    <string name="selecionar_usuario">Selecionar Usuário</string>
    <string name="consultar">consultar</string>
    <string name="notas">Notas</string>
    <string name="title_activity_consulta_notas">ConsultaNotasActivity</string>

    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string name="title_activity_estudos">EstudosActivity</string>
    <string name="estudos_mes">Estudos dirigidos durante o mês de</string>
    <string name="publicador">Publicador</string>
    <string name="title_activity_resumo_anual">ResumoAnualActivity</string>

</resources>
