<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_cad_user"
        tools:context=".views.CadUserActivity"
        android:background="@drawable/background_textture_2">

    <TextView
            android:text="@string/cadastro_de_usuario"
            android:textAlignment="center"
            android:layout_margin="30dp"
            android:textColor="@color/colorWhite"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/nameUser"
            android:hint="@string/nome"
            android:background="@drawable/input_text"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/mailUser"
            android:hint="@string/e_mail"
            android:background="@drawable/input_text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btnSave"
            android:text="@string/salvar"
            android:background="@drawable/background_button"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>