<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_insert"
        tools:context=".views.InsertActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/data"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/insertData"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btnDate"
                android:text="@string/selecionar_data"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/insertHour"
                android:hint="00"
                android:textAlignment="center"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/horas"
                android:textAlignment="center"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/insertMinute"
                android:hint="00"
                android:textAlignment="center"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/minutos"
                android:textAlignment="center"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/btnPubMais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/viewPub"
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageButton
                android:id="@+id/btnPubMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/publicacoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/btnVidMais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/viewVid"
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageButton
                android:id="@+id/btnVidMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/btnRevMais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/viewRev"
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageButton
                android:id="@+id/btnRevMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/revisitas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <Spinner
            android:id="@+id/nameSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="Notas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="50pt">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="Digite aqui"
                android:ems="10"
                android:id="@+id/notas"/>

    </ScrollView>

    <Button
            android:id="@+id/salvar"
            android:text="salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/bdTestes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</LinearLayout>