<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_consult"
        android:background="@drawable/background_textture_2"
        tools:context=".views.ConsultActivity">

    <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0pt"
                android:layout_marginRight="5dp"
                android:layout_weight="1"

                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/selecionar_usuario"
                    android:layout_width="match_parent"
                    android:background="@drawable/background_consult_top"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"/>

            <Spinner
                    android:id="@+id/consultSpinner"
                    android:background="@drawable/background_consult_bottom"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0pt"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/consultData"
                    android:textAlignment="center"
                    android:text="Selecionar data"
                    android:background="@drawable/background_consult_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/consultDataBtn"
                    android:textSize="15dp"
                    android:background="@drawable/background_consult_date_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/consultBtn"
            android:text="@string/consultar"
            android:background="@drawable/background_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginRight="5pt"
            android:layout_marginLeft="5pt"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/publicacoes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_consult_left"
                android:textSize="6pt"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/consultPub"
                android:layout_width="0dp"
                android:background="@drawable/background_consult_right"
                android:textColor="@color/colorOrange1"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="6pt"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginRight="5pt"
            android:layout_marginLeft="5pt"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/videos"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_consult_left"
                android:textSize="6pt"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/consultVid"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_consult_right"
                android:textColor="@color/colorOrange1"
                android:textAlignment="center"
                android:textSize="6pt"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginRight="5pt"
            android:layout_marginLeft="5pt"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/horas"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_consult_left"
                android:textSize="6pt"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/consultHoras"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_consult_right"
                android:textColor="@color/colorOrange1"
                android:textAlignment="center"
                android:textSize="6pt"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginRight="5pt"
            android:layout_marginLeft="5pt"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/revisitas"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_consult_left"
                android:textSize="6pt"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/consultRev"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_consult_right"
                android:textColor="@color/colorOrange1"
                android:textAlignment="center"
                android:textSize="6pt"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
            android:text="@string/notas"
            android:layout_marginRight="5pt"
            android:layout_marginLeft="5pt"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_marginRight="5pt"
            android:layout_marginLeft="5pt"
            android:layout_marginBottom="5dp"
            android:layout_height="50pt">

        <TextView
                android:id="@+id/consultNotas"
                android:background="@drawable/background_row_notas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </ScrollView>

    <Button
            android:id="@+id/consultDelete"
            android:text="Deletar"
            android:background="@drawable/background_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>